projet_gl/src/test/deca/syntax/invalid/listExpr/incorrectCast.deca
// Description:
//    invalid test parser for cast.
//
// Resultats:
//   ligne 12 : mismatched input ')' expecting {'instanceof', '<', '>', '=', '+', '-', '*', '/', '%', '.', ',', ';', '==', '!=', '>=', '<=', '&&', '||'}.
//
// Historique:
//    cree le 11/01/2024

{
    float x = 1.5;
    int y = int)(x);
}

